Fix #909: allow commandline to be pushed to side by scrollbar

--- a/src/static/css/content.css
+++ b/src/static/css/content.css
@@ -1,7 +1,6 @@
 #cmdline_iframe {
     position: fixed !important;
     bottom: 0 !important;
-    left: 0 !important;
     z-index: 2147483647 !important;
     width: 100% !important;
     height: 0 !important;
